--- a/fornecedores/templates/editarfornecedor.html
+++ b/fornecedores/templates/editarfornecedor.html
@@ -19,7 +19,7 @@
         <input type="text"  value="{{fn.cnpj}}" name="cnpj" id="cnpj">
 
         
-        <input type="submit" value="Salvar" class="btn btn-success efn">
+        <input type="submit" value="Salvar" class="btn btn-success edfn">
         <a href="{% url 'fornecedores:verfornecedor' fn.id %}" class="btn btn-danger">Voltar</a>
         <a href="{% url 'fornecedores:paginseririmg' fn.id %}" class="btn btn-warning">Nova imagem</a>
         
