--- a/produtos/templates/adproduto.html
+++ b/produtos/templates/adproduto.html
@@ -48,5 +48,5 @@
     
 </main>
 
-<script src="{% static 'produtos/js/funcoes.js' %}"></script>
+<script src="{% static 'produtos/js/funcoes2.js' %}"></script>
 {% endblock %}
