--- a/produtos/templates/altimagemprod.html
+++ b/produtos/templates/altimagemprod.html
@@ -25,5 +25,5 @@
         </form>     
                      
 </main>
-<script src="{% static 'produtos/js/funcoes.js' %}"></script>
+<script src="{% static 'produtos/js/funcoes2.js' %}"></script>
 {% endblock %}
