--- a/produtos/templates/verproduto.html
+++ b/produtos/templates/verproduto.html
@@ -27,5 +27,5 @@
    
 </main>
 
-<script src="{% static 'produtos/js/funcoes2.js' %}"></script>
+<!--<script src="{% static 'produtos/js/funcoes2.js' %}"></script>-->
 {% endblock %}
