--- a/produtos/templates/adproduto.html
+++ b/produtos/templates/adproduto.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-<!--{% load static %}-->
+{% load static %}
 
 {% block 'titulo' %}iMercado - Adicionar produto{% endblock %}
 {% block 'conteudo' %}
@@ -48,5 +48,5 @@
     
 </main>
 
-<!--<script src="{% static 'produtos/js/funcoes2.js' %}"></script>-->
+<script src="{% static 'produtos/js/funcoes.js' %}"></script>
 {% endblock %}
