--- a/produtos/templates/altimagemprod.html
+++ b/produtos/templates/altimagemprod.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-<!--{% load static %}-->
+{% load static %}
 
 {% block 'titulo' %}iMercado - Alterar imagem de produto{% endblock %}
 {% block 'head' %}
@@ -25,5 +25,5 @@
         </form>     
                      
 </main>
-<!--<script src="{% static 'produtos/js/funcoes2.js' %}"></script>-->
+<script src="{% static 'produtos/js/funcoes.js' %}"></script>
 {% endblock %}
