--- a/produtos/templates/editarproduto.html
+++ b/produtos/templates/editarproduto.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-<!--{% load static %}-->
+{% load static %}
 
 {% block 'titulo' %}iMercado - Editar produto{% endblock %}
 {% block 'conteudo' %}
@@ -52,5 +52,5 @@
     
 </main>
 
-<!--<script src="{% static 'produtos/js/funcoes.js' %}"></script>-->
+<script src="{% static 'produtos/js/funcoes.js' %}"></script>
 {% endblock %}
