--- a/produtos/templates/verproduto.html
+++ b/produtos/templates/verproduto.html
@@ -20,12 +20,12 @@
         <input type="hidden" name="produto_id" value="{{pr.id}}">
         <input type="hidden" name="imagem_prod" value="{{pr.img.url}}">
         
-        <button><a href="{% url 'produtos:editarproduto' pr.id %}">Editar</a></button>
+        <button class="btn btn-success"><a style="color:white; " href="{% url 'produtos:editarproduto' pr.id %}">Editar</a></button>
         <input type="submit" value="Excluir" class="btn btn-danger epr" >
         <a href="{% url 'produtos:listaprodutos' %}" class="btn btn-info">Voltar</a>
     </form>
    
 </main>
 
-<!--<script src="{% static 'produtos/js/funcoes2.js' %}"></script>-->
+<script src="{% static 'produtos/js/funcoes.js' %}"></script>
 {% endblock %}
