--- a/sistema/templates/inicio.html
+++ b/sistema/templates/inicio.html
@@ -8,14 +8,25 @@
 
     <p>Veja abaixo os produtos e mercados disponíveis</p>
     <div>
-        <h3>Produtos</h3>
-        <img src="{% static 'sistema/img/setabaixo.svg' %}" alt="seta baixo">
+        <div>
+            <h3>Pedidos</h3>
+            <img src="{% static 'sistema/img/setabaixo.svg' %}" alt="seta baixo">
+        </div>
+        <section>Lista dos pedidos</section>
+    </div>
+    <div>
+        <div>
+            <h3>Produtos</h3>
+            <img src="{% static 'sistema/img/setabaixo.svg' %}" alt="seta baixo">
+        </div>
         <section>Lista dos produtos</section>
     </div>
 
     <div>
-        <h3>Mercados</h3>
-        <img src="{% static 'sistema/img/setabaixo.svg' %}" alt="seta baixo">
+        <div>
+            <h3>Mercados</h3>
+            <img src="{% static 'sistema/img/setabaixo.svg' %}" alt="seta baixo">
+        </div>
         <section>Lista dos mercados</section>
     </div>
 </main>
