--- a/categorias/templates/vercategoria.html
+++ b/categorias/templates/vercategoria.html
@@ -13,7 +13,7 @@
         {% csrf_token %}
         <input type="hidden" name="categoria_id" value="{{cat.id}}">
         
-        <button><a href="{% url 'categorias:editarcategoria' cat.id %}">Editar</a></button>
+        <button class="btn btn-success"><a style="color:white" href="{% url 'categorias:editarcategoria' cat.id %}">Editar</a></button>
         <input type="submit" value="Excluir" class="btn btn-danger ecat">
         <a href="{% url 'categorias:listacategorias' %}" class="btn btn-info">Voltar</a>
     </form>
