--- a/templates/base.html
+++ b/templates/base.html
@@ -34,23 +34,22 @@
         <li class="nav-item active">
           <a class="nav-link" href="{% url 'produtos:listaprodutos' %}">Produtos</a>
         </li>
-        
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Pedidos</a>
-        </li>
 
         <li class="nav-item active">
           <a class="nav-link" href="{% url 'fornecedores:listafornecedores' %}">Fornecedores</a>
+        </li>
+
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Pedidos</a>
         </li>
 
         <li class="nav-item active dropdown">
           <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Cadastrar</a>
           <div class="dropdown-menu" aria-labelledby="dropdown01">
             <a class="dropdown-item" href="#">Pedido</a>
-            <a class="dropdown-item" href="#">Setor</a>
-            <a class="dropdown-item" href="#">Filial</a>
-            <a class="dropdown-item" href="#">Produto</a>
-            <a class="dropdown-item" href="#">Fornecedor</a>
+            <a class="dropdown-item" href="{% url 'categorias:adcategoria' %}">Categoria</a>
+            <a class="dropdown-item" href="{% url 'produtos:adproduto' %}">Produto</a>
+            <a class="dropdown-item" href="{% url 'fornecedores:adfornecedor' %}">Fornecedor</a>
           </div>
         </li>
         <li class="nav-item active">
