--- a/templates/base.html
+++ b/templates/base.html
@@ -40,13 +40,13 @@
         </li>
 
         <li class="nav-item active">
-          <a class="nav-link" href="#">Pedidos</a>
+          <a class="nav-link" href="{% url 'pedidos:listapedidos' %}">Pedidos</a>
         </li>
 
         <li class="nav-item active dropdown">
           <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Cadastrar</a>
           <div class="dropdown-menu" aria-labelledby="dropdown01">
-            <a class="dropdown-item" href="#">Pedido</a>
+            <a class="dropdown-item" href="{% url 'pedidos:adpedido' %}">Pedido</a>
             <a class="dropdown-item" href="{% url 'categorias:adcategoria' %}">Categoria</a>
             <a class="dropdown-item" href="{% url 'produtos:adproduto' %}">Produto</a>
             <a class="dropdown-item" href="{% url 'fornecedores:adfornecedor' %}">Fornecedor</a>
