--- a/pedidos/templates/adpedido.html
+++ b/pedidos/templates/adpedido.html
@@ -33,7 +33,7 @@
         </select>
 
         <label>Pagamento:</label>
-        <select  id="sts_pedido" name="sts_pedido">
+        <select  id="pag_pedido" name="pag_pedido">
               <option value="Cr">Crédito</option>
               <option value="De">Débito</option>
               <option value="Di">Dinheiro</option>
