--- a/pedidos/templates/adpedido.html
+++ b/pedidos/templates/adpedido.html
@@ -25,11 +25,9 @@
 
         <label>Status:</label>
         <select  id="sts_pedido" name="sts_pedido">
-              <option value="Ca">Cancelado</option>
-              <option value="En">Entregue</option>
-              <option value="Ac">A caminho</option>
-              <option value="At">Atrasado</option>
-              <option value="En">Enviado</option>
+            {% for p in ped.status_opc %}
+                <option value="{{p.0}}">{{p.1}}</option>
+            {% endfor%}
         </select>
 
         <label>Pagamento:</label>
