--- a/categorias/templates/categorias.html
+++ b/categorias/templates/categorias.html
@@ -18,6 +18,6 @@
             </li>
         {% endfor %}
     </ul>
-    <button><a href="{% url 'categorias:adcategoria' %}">Adicionar</a></button>
+    <a class="btn btn-success" href="{% url 'categorias:adcategoria' %}">Adicionar</a>
 </main>
 {% endblock %}
