--- a/pedidos/templates/adpedido.html
+++ b/pedidos/templates/adpedido.html
@@ -44,5 +44,5 @@
     
 </main>
 
-<script src="{% static 'categorias/js/funcoes.js' %}"></script>
+<script src="{% static 'pedidos/js/funcoes.js' %}"></script>
 {% endblock %}
