--- a/pedidos/templates/pedidos.html
+++ b/pedidos/templates/pedidos.html
@@ -18,6 +18,6 @@
             </li>
         {% endfor %}
     </ul>
-    <button><a href="{% url 'pedidos:adpedido' %}">Adicionar</a></button>
+    <a class="btn btn-success" href="{% url 'pedidos:adpedido' %}">Adicionar</a>
 </main>
 {% endblock %}
