--- a/categorias/templates/vercategoria.html
+++ b/categorias/templates/vercategoria.html
@@ -15,7 +15,7 @@
         {% csrf_token %}
         <input type="hidden" name="categoria_id" value="{{cat.id}}">
         
-        <button class="btn btn-success"><a style="color:white" href="{% url 'categorias:editarcategoria' cat.id %}">Editar</a></button>
+        <a class="btn btn-success" style="color:white" href="{% url 'categorias:editarcategoria' cat.id %}">Editar</a>
         <input type="submit" value="Excluir" class="btn btn-danger ecat">
         <a href="{% url 'categorias:listacategorias' %}" class="btn btn-info">Voltar</a>
     </form>
