--- a/fornecedores/templates/fornecedores.html
+++ b/fornecedores/templates/fornecedores.html
@@ -18,6 +18,6 @@
             </li>
         {% endfor %}
     </ul>
-    <button><a href="{% url 'fornecedores:adfornecedor' %}">Adicionar</a></button>
+    <a class="btn btn-success" href="{% url 'fornecedores:adfornecedor' %}">Adicionar</a>
 </main>
 {% endblock %}
