--- a/fornecedores/templates/verfornecedor.html
+++ b/fornecedores/templates/verfornecedor.html
@@ -18,7 +18,7 @@
         <input type="hidden" name="fornecedor_id" value="{{fn.id}}">
         <input type="hidden" name="imagem_url" value="{{fn.img.url}}">
         
-        <button class="btn btn-success"><a style="color:white" href="{% url 'fornecedores:editarfornecedor' fn.id %}">Editar</a></button>
+        <a class="btn btn-success" style="color:white" href="{% url 'fornecedores:editarfornecedor' fn.id %}">Editar</a>
         <input type="submit" value="Excluir" class="btn btn-danger efn" >
         <a href="{% url 'fornecedores:listafornecedores' %}" class="btn btn-info">Voltar</a>
     </form>
