--- a/produtos/templates/produtos.html
+++ b/produtos/templates/produtos.html
@@ -18,6 +18,6 @@
             </li>
         {% endfor %}
     </ul>
-    <button><a href="{% url 'produtos:adproduto' %}">Adicionar</a></button>
+    <a class="btn btn-success" href="{% url 'produtos:adproduto' %}">Adicionar</a>
 </main>
 {% endblock %}
