--- a/pedidos/templates/pedidos.html
+++ b/pedidos/templates/pedidos.html
@@ -19,5 +19,6 @@
         {% endfor %}
     </ul>
     <a class="btn btn-success" href="{% url 'pedidos:adpedido' %}">Adicionar</a>
+    <a href="{% url 'sistema:inicio' %}" class="btn btn-info">Voltar</a>
 </main>
 {% endblock %}
