--- a/sistema/templates/sobre.html
+++ b/sistema/templates/sobre.html
@@ -3,7 +3,7 @@
 
 {% block 'titulo' %}iMercado - Sobre{% endblock %}
 {% block 'head' %}
-<link rel="stylesheet" type="text/css" href="{% static 'sistema/css/sobre.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'sistema/css/estilo.css' %}">
 {% endblock %}
 
 {% block 'conteudo' %}
@@ -12,7 +12,7 @@
         
         <div class="perfil">
             <h1>Sobre</h1>
-            <img src="{% static 'sistema/img/foto.png' %}" alt="Foto Desenvolvedor">
+            <img class="foto-perfil" src="{% static 'sistema/img/foto.png' %}" alt="Foto Desenvolvedor">
         </div>
         <h6>Desenvolvedor:</h6>
         <p>Diego Dreossi</p>
