--- a/templates/static/sistema/css/estilo.css
+++ b/templates/static/sistema/css/estilo.css
@@ -13,7 +13,7 @@ main{
     background-color:rgb(246, 237, 223);
 }
 
-main img{
+.foto-perfil{
     height: 150px;
     width: 150px;
     float: right;
@@ -22,6 +22,7 @@ main img{
 h1{
     font-size: 50px;
     float: left;
+    
 }
 
 h6{
@@ -33,5 +34,23 @@ h6{
     display: flex;
     align-items:center;
     justify-content:space-between;
+}
+
+.seta{
+    height: 20px;
+    width: 20px;
+    padding-left: 5px;
+}
+
+.aperte{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: row;
+    background-color: rgb(216, 207, 207) ;
+}
+
+.fundo-aperte{
+    background-color: rgb(216, 207, 207) ;
 }
 
