--- a/sistema/templates/inicio.html
+++ b/sistema/templates/inicio.html
@@ -7,8 +7,10 @@
 {% block 'conteudo' %}
 <main>
     <div>
-        <h1>Página Inicial do iMercado</h1>
-        <p>Veja abaixo os produtos e mercados disponíveis</p>
+        <div class="cabecalho-inicio">
+            <h1>Página Inicial - iMercado</h1>
+            <p>Veja abaixo os produtos e mercados disponíveis</p>
+        </div>
         <div >
             <div class="aperte">
                 <h3>Pedidos</h3>
@@ -25,7 +27,7 @@
         </div>
         <div >
             <div class="aperte">
-                <h3>Mercados</h3>
+                <h3>Fornecedores</h3>
                 <img class="seta" src="{% static 'sistema/img/setabaixo.svg' %}" alt="seta baixo">
             </div>
             <section>Lista dos mercados</section>
