--- a/templates/static/sistema/css/estilo.css
+++ b/templates/static/sistema/css/estilo.css
@@ -3,6 +3,14 @@ main{
     display: flex;
     align-items: center;
     justify-content: center;
+    
+}
+
+.cabecalho-inicio{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .com-borda{
