--- a/autenticacao/templates/cadastro.html
+++ b/autenticacao/templates/cadastro.html
@@ -2,37 +2,39 @@
 {% load static %}
 
 {% block 'head' %}
-<link rel="stylesheet" href="{% static 'autenticacao/css/cadastro.css' %}">
+<link rel="stylesheet" href="{% static 'autenticacao/css/estilo.css' %}">
 {% endblock %}
 
 {% block 'conteudo' %}
-<div class="box">
-    <form action="{% url 'autenticacao:valida_cadastro'%}" method="post">
-        {% csrf_token %}
-        {% if messages %}
-            {% for message in messages %}
-                <div class="alert {{message.tags}}">
-                    {{message}}
-                </div>
-            {% endfor %}
-        {% endif %}
-        <h1 class="titulo font-degrade borda-bottom-degrade">INSCREVA-SE</h2>
-            <br>
-            <span class="span-descricao">Nome de usuário:</span>
-            <input type="text" class="form-control input-cadastro" name="nome">
-            <br>
-            <span class="span-descricao">E-mail:</span>
-            <input type="text" class="form-control input-cadastro" name="email">
-            <br>
-            <span class="span-descricao">Senha:</span>
-            <input type="password" class="form-control input-cadastro" name="senha">
-            <br>
-            <span class="span-descricao">Confirmar senha:</span>
-            <input type="password" class="form-control input-cadastro" name="confirma_senha">
-            <br>
-            <input type="submit" value="CADASTRAR" class="btn btn-success btn-lg">
-            <a href="{% url 'autenticacao:login'%}" class="btn btn-primary btn-lg">LOGIN</a>
-    </form>
-
+<div class="corpo">
+    <div class="box caixa-cadastro">
+        <form action="{% url 'autenticacao:valida_cadastro'%}" method="post">
+            {% csrf_token %}
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert {{message.tags}}">
+                        {{message}}
+                    </div>
+                {% endfor %}
+            {% endif %}
+            <h1 class="titulo font-degrade borda-bottom-degrade"><strong>INSCREVA-SE</strong></h1>
+                <br>
+                <span class="span-descricao">Nome de usuário:</span>
+                <input type="text" class="form-control input-cadastro" name="nome">
+                <br>
+                <span class="span-descricao">E-mail:</span>
+                <input type="text" class="form-control input-cadastro" name="email">
+                <br>
+                <span class="span-descricao">Senha:</span>
+                <input type="password" class="form-control input-cadastro" name="senha">
+                <br>
+                <span class="span-descricao">Confirmar senha:</span>
+                <input type="password" class="form-control input-cadastro" name="confirma_senha">
+                <br>
+                <input type="submit" value="CADASTRAR" class="btn btn-success btn-lg">
+                <a href="{% url 'autenticacao:login'%}" class="btn btn-primary btn-lg">LOGIN</a>
+        </form>
+    
+    </div>
 </div>
 {% endblock %}
